# xbot2_diagnostics

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
aggregator/: aggregator.py  aggregator_node.py  config.py
aggregator/sinks/: __init__.py  influxdb_sink.py  json_file_sink.py  ros_diagnostics_sink.py  stdout_sink.py
cmake/: xbot2_diagnosticsConfig.cmake.in
config/: aggregator.yaml  diagnostic_remote_logging.yaml  host_monitor.yaml
docker/: .env.example  docker-compose.diagnostics.yml
docker/grafana/provisioning/datasources/: influxdb.yaml
include/xbot2_diagnostics/: diagnostics.h  publisher.h  ros2_publisher.h  stats_accumulator.h
launch/: diagnostic_remote_logging.launch.py  xbot2_diagnostics_aggregator.launch.py
python/: CMakeLists.txt  pyproject.toml
python/src/pyxbot2_diagnostics/: __init__.py  publisher.py  stats_accumulator.py
python/src/pyxbot2_diagnostics/aggregator/: __init__.py  aggregator.py  aggregator_node.py  config.py
python/src/pyxbot2_diagnostics/aggregator/schema/: diagnostics_message.schema.json
python/src/pyxbot2_diagnostics/aggregator/sinks/: influxdb_sink.py  json_file_sink.py  ros_diagnostics_sink.py  stdout_sink.py
python/src/pyxbot2_diagnostics/aggregator/sources/: __init__.py  ros_diagnostics_source.py
python/src/pyxbot2_diagnostics/host_monitor/: __init__.py  collectors.py  config.py  health.py  monitor.py
scripts/: influx_clear_bucket.bash  influx_sink_probe.bash  influx_status.bash  influx_tail.bash
services/: xbot2-host-monitor.service.in
src/: profile_publish.cpp  profile_stats_accumulator.cpp
test/: test_publisher.cpp  test_stats_accumulator.cpp
tests/: test_aggregator.py  test_aggregator_node.py  test_config.py  test_host_collectors.py  test_host_monitor.py  test_host_monitor_config_health.py  test_observability_assets.py  test_python38_compatibility.py  test_python_publisher.py  test_ros_source.py  test_sinks.py
tests/config/: aggregator.yaml
