[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxbot2_diagnostics"
version = "0.1.0"
description = "Diagnostics client for XBot2"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "LGPL-3.0-or-later" }
authors = [
    { name = "IIT" },
]
dependencies = [
    "numpy>=1.21",
    "PyYAML>=5.4",
    "pyzmq>=25",
    "jsonschema>=4.0",
    "psutil>=5.9",
    "influxdb_client"
]

[project.scripts]
xbot2-host-monitor = "pyxbot2_diagnostics.host_monitor.monitor:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "tomli>=1.1; python_version < '3.11'",
]

[project.urls]
Repository = "https://github.com/ADVRHumanoids/xbot2_diagnostics"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pyxbot2_diagnostics.aggregator" = ["schema/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["xbot2_diagnostics"]
